[package]
name          = "api-version"
version       = "0.0.1"
edition       = "2021"
description   = "Axum middleware to add a version prefix to request paths based on a set of versions and an optional `x-api-version` header"
authors       = [ "scnd developers <dev@scnd.com>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/scndcloud/api-version"
repository    = "https://github.com/scndcloud/api-version"
documentation = "https://github.com/scndcloud/api-version"

[dependencies]
array-macro = { version = "2.1" }
async-trait = { version = "0.1" }
axum        = { version = "0.6", features = [ "headers" ] }
futures     = { version = "0.3" }
regex       = { version = "1.10" }
thiserror   = { version = "1.0" }
tower       = { version = "0.4" }
tracing     = { version = "0.1" }

[dev-dependencies]
futures = { version = "0.3" }
tokio   = { version = "1", features = [ "macros" ] }
